[package]
name = "git-suggest-reviewers"
version = "1.4.5"
authors = ["Joel Nises <joel.nises@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0"
structopt = "0.3"
log = "0.4"
stderrlog = "0.5"
indicatif = "0.16"
rayon = "1.5"
thread_local = "1.0"
git2 = { version = "0.13", default-features = false }
