[package]
name = "git-suggest-reviewers"
version = "1.4.7"
authors = ["Joel Nises <joel.nises@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0"
structopt = "0.3"
log = "0.4"
stderrlog = "0.5"
indicatif = "0.17"
rayon = "1.5"
thread_local = "1.0"
git2 = { version = "0.15", default-features = false }
