[package]
name = "git-suggest-reviewers"
version = "1.4.10"
authors = ["Joel Nises <joel.nises@gmail.com>"]
edition = "2021"

[profile.release]
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
stderrlog = "0.5"
indicatif = "0.17"
rayon = "1.5"
thread_local = "1.1"
git2 = { version = "0.18", default-features = false }
